Fine tuning added to start script